# reddit-trends-mcp

./: README.md  pyproject.toml
src/reddit_trends_mcp/: __init__.py
